delete item from table

--- a/package.json
+++ b/package.json
@@ -52,13 +52,12 @@
 		"prismjs": "^1.29.0",
 		"prop-types": "^15.8.1",
 		"rc-tree": "^5.8.2",
-		"react": "^18.3.1",
+		"react": "^18.2.0",
 		"react-apexcharts": "^1.4.1",
 		"react-big-calendar": "^1.8.6",
 		"react-credit-cards-2": "0.10.0",
 		"react-date-range": "^1.4.0",
-		"react-dom": "^18.3.1",
-		"react-ga4": "^2.1.0",
+		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.0",
 		"react-image-webp": "^0.8.0",
 		"react-input-mask": "^2.0.4",
@@ -113,7 +112,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.33",
 		"prettier": "^3.2.4",
-		"sass": "1.77.6",
+		"sass": "^1.70.0",
 		"sass-loader": "^14.0.0",
 		"stylelint": "^16.1.0",
 		"stylelint-config-prettier-scss": "^1.0.0",
