--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "facit",
 	"version": "4.3.4",
 	"private": true,
+	"homepage": "https://{pakkien}.github.io/{test-react}/",
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist",
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -110,6 +113,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"gh-pages": "^6.2.0",
 		"postcss": "^8.4.33",
 		"prettier": "^3.2.4",
 		"sass": "^1.70.0",
