--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "facit",
 	"version": "4.3.4",
 	"private": true,
+	"homepage": "https://pakkien.github.io/test_react/",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
