--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
 		"@hello-pangea/dnd": "^16.5.0",
+		"@hookform/resolvers": "^3.9.1",
 		"@omtanke/react-use-event-outside": "^1.0.1",
 		"@popperjs/core": "^2.11.8",
 		"@reactour/tour": "^3.6.1",
@@ -58,6 +59,7 @@
 		"react-credit-cards-2": "0.10.0",
 		"react-date-range": "^1.4.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.53.1",
 		"react-i18next": "^14.0.0",
 		"react-image-webp": "^0.8.0",
 		"react-input-mask": "^2.0.4",
@@ -77,7 +79,9 @@
 		"use-clipboard-copy": "^0.2.0",
 		"vite": "^5.0.11",
 		"vite-plugin-svgr": "^4.2.0",
-		"web-vitals": "^3.5.1"
+		"web-vitals": "^3.5.1",
+		"yup": "^1.4.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.7",
