upload file + view 2 item same time

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"react-credit-cards-2": "0.10.0",
 		"react-date-range": "^1.4.0",
 		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.1",
 		"react-i18next": "^14.0.0",
 		"react-image-webp": "^0.8.0",
@@ -67,6 +68,7 @@
 		"react-modern-calendar-datepicker": "^3.1.6",
 		"react-notifications-component": "^4.0.1",
 		"react-number-format": "^5.3.1",
+		"react-pdf": "^9.1.1",
 		"react-popper": "^2.3.0",
 		"react-router-dom": "^6.21.2",
 		"react-router-hash-link": "^2.4.3",
