--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 DISABLE_ESLINT_PLUGIN="true"
 VITE_SITE_NAME="DEV"
 VITE_STORYBOOK_URL="http://localhost:6006/?path="
-API_BASE_URL = "http://127.0.0.1:5000"
+API_BASE_URL = "http://127.0.0.1:5000/"
