--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"react-router-dom": "^6.21.2",
 		"react-router-hash-link": "^2.4.3",
 		"react-scrollspy": "^3.4.3",
+		"react-select": "^5.8.3",
 		"react-syntax-highlighter": "^15.5.0",
 		"react-toastify": "^10.0.3",
 		"react-transition-group": "^4.4.5",
