--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		]
 	},
 	"dependencies": {
+		"@cyntler/react-doc-viewer": "^1.17.0",
 		"@emotion/react": "^11.11.3",
 		"@hello-pangea/dnd": "^16.5.0",
 		"@hookform/resolvers": "^3.9.1",
