--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@vitejs/plugin-react": "^4.2.1",
 		"apexcharts": "^3.45.1",
 		"axios": "^1.7.7",
+		"base-64": "^1.0.0",
 		"classnames": "^2.5.1",
 		"date-fns": "2.30.0",
 		"dayjs": "^1.11.10",
@@ -95,6 +96,7 @@
 		"@babel/plugin-transform-react-jsx": "^7.23.4",
 		"@svgr/cli": "^8.1.0",
 		"@testing-library/dom": "^9.3.4",
+		"@types/base-64": "^1.0.2",
 		"@types/pascalcase": "^1.0.3",
 		"@types/payment": "^2.1.7",
 		"@types/prismjs": "^1.26.3",
